@@ -1490,19 +1490,6 @@ options.status.memory.background=Memory indicator background:
 options.syntax.label=Syntax Highlighting
 options.syntax.object=Token type
 options.syntax.style=Text style
-options.syntax.comment1Style=Comment 1
-options.syntax.comment2Style=Comment 2
-options.syntax.literal1Style=Literal 1
-options.syntax.literal2Style=Literal 2
-options.syntax.labelStyle=Label
-options.syntax.keyword1Style=Keyword 1
-options.syntax.keyword2Style=Keyword 2
-options.syntax.keyword3Style=Keyword 3
-options.syntax.functionStyle=Function
-options.syntax.markupStyle=Markup
-options.syntax.operatorStyle=Operator
-options.syntax.digitStyle=Digit
-options.syntax.invalidStyle=Invalid token
 options.syntax.foldLine.1=Collapsed fold line, level 1
 options.syntax.foldLine.2=Collapsed fold line, level 2
 options.syntax.foldLine.3=Collapsed fold line, level 3
