@@ -21,6 +21,8 @@
  */
 package org.gjt.sp.jedit.syntax;
 
+import java.lang.reflect.Field;
+
 /**
  * A linked list of syntax tokens.
  *
@@ -37,61 +39,75 @@ public class Token
 	 */
 	public static byte stringToToken(String value)
 	{
-		value = value.intern();
-
-		if (value == "NULL")
-			return Token.NULL;
-		else if (value == "COMMENT1")
-			return Token.COMMENT1;
-		else if (value == "COMMENT2")
-			return Token.COMMENT2;
-		else if (value == "LITERAL1")
-			return Token.LITERAL1;
-		else if (value == "LITERAL2")
-			return Token.LITERAL2;
-		else if (value == "LABEL")
-			return Token.LABEL;
-		else if (value == "KEYWORD1")
-			return Token.KEYWORD1;
-		else if (value == "KEYWORD2")
-			return Token.KEYWORD2;
-		else if (value == "KEYWORD3")
-			return Token.KEYWORD3;
-		else if (value == "FUNCTION")
-			return Token.FUNCTION;
-		else if (value == "MARKUP")
-			return Token.MARKUP;
-		else if (value == "OPERATOR")
-			return Token.OPERATOR;
-		else if (value == "DIGIT")
-			return Token.DIGIT;
-		else if (value == "INVALID")
-			return Token.INVALID;
-		else
+		try
+		{
+			Field f = Token.class.getField(value);
+			return (byte)f.getByte(null);
+		}
+		catch(Exception e)
+		{
 			return -1;
+		}
+	} //}}}
+
+	//{{{ tokenToString() method
+	/**
+	 * Converts a token type constant to a token type string.
+	 * @since jEdit 4.2pre1
+	 */
+	public static String tokenToString(byte token)
+	{
+		return TOKEN_TYPES[token];
 	} //}}}
 
 	//{{{ Token types
+	public static final String[] TOKEN_TYPES = new String[] {
+		"NULL",
+		"COMMENT1",
+		"COMMENT2",
+		"COMMENT3",
+		"COMMENT4",
+		"DIGIT",
+		"FUNCTION",
+		"INVALID",
+		"KEYWORD1",
+		"KEYWORD2",
+		"KEYWORD3",
+		"KEYWORD4",
+		"LABEL",
+		"LITERAL1",
+		"LITERAL2",
+		"LITERAL3",
+		"LITERAL4",
+		"MARKUP",
+		"OPERATOR"
+	};
+
 	public static final byte NULL = 0;
+
 	public static final byte COMMENT1 = 1;
 	public static final byte COMMENT2 = 2;
-	public static final byte LITERAL1 = 3;
-	public static final byte LITERAL2 = 4;
-	public static final byte LABEL = 5;
-	public static final byte KEYWORD1 = 6;
-	public static final byte KEYWORD2 = 7;
-	public static final byte KEYWORD3 = 8;
-	public static final byte FUNCTION = 9;
-	public static final byte MARKUP = 10;
-	public static final byte OPERATOR = 11;
-	public static final byte DIGIT = 12;
-	public static final byte INVALID = 13; //}}}
+	public static final byte COMMENT3 = 3;
+	public static final byte COMMENT4 = 4;
+	public static final byte DIGIT = 5;
+	public static final byte FUNCTION = 6;
+	public static final byte INVALID = 7;
+	public static final byte KEYWORD1 = 8;
+	public static final byte KEYWORD2 = 9;
+	public static final byte KEYWORD3 = 10;
+	public static final byte KEYWORD4 = 11;
+	public static final byte LABEL = 12;
+	public static final byte LITERAL1 = 13;
+	public static final byte LITERAL2 = 14;
+	public static final byte LITERAL3 = 15;
+	public static final byte LITERAL4 = 16;
+	public static final byte MARKUP = 17;
+	public static final byte OPERATOR = 18;
+	//}}}
 
-	public static final byte ID_COUNT = 14;
+	public static final byte ID_COUNT = 19;
 
 	// Special:
-	public static final byte WHITESPACE = 125;
-	public static final byte TAB = 126;
 	public static final byte END = 127;
 
 	//{{{ Instance variables
